# djangoBoats

./: manage.py  pyproject.toml
boats/: admin.py  apps.py  urls.py  views.py
boats/migrations/: 0001_initial.py
boats/models/: boat.py  boat_history.py  owner.py
boats/templates/boats/: base.html  boats_list.html
djangoBoats/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: holder.min.js
